Render tabs correctly with the "high contrast" theme, even if tabs are opened in regular tabs

--- a/webextensions/resources/ui-color.css
+++ b/webextensions/resources/ui-color.css
@@ -241,26 +241,3 @@ hr {
     --text-color: var(--in-content-text-color);
   }
 }
-
-
-/*
- Global styles for extensions page from chrome://browser/content/extension.css
- They are applied to sidebar contents automatically but not provided for
- in-page contents, so we manually define them here.
-*/
-html,
-body {
-  box-sizing: border-box;
-  cursor: default;
-  display: flex;
-  flex-direction: column;
-  font: caption;
-  font-weight: normal; /* This is required to cancel unexpected bold weight produced by the "caption" system font name on Windows 7 Classic theme. See also: https://github.com/piroor/treestyletab/issues/2636 */
-  margin: 0;
-  padding: 0;
-  -moz-user-select: none;
-}
-body * {
-  box-sizing: border-box;
-  text-align: start;
-}
